testsuite/positive/Issue-1252.n
using System;
using System.Console;

module Program
{
  Main() : void
  {
    using (x = null : IDisposable) 
    {
      when (x == null)
        throw ArgumentException("x is null");  
    }
    catch
    {
      | a is ArgumentException => WriteLine(a.Message); 
    }
  }
}

/*
BEGIN-OUTPUT
x is null
END-OUTPUT
*/