testsuite/negative/Issue-git-0525.n
using System;

module Program
{

  Main() : void
  {
    try
    {
    }
    catch
    {
      | Ex => () // E: unbound type name `Ex'
    }
  }
}

